--- a/index.html
+++ b/index.html
@@ -203,24 +203,16 @@
 
             <h2 class="more-spaced">Una nueva era en vehículos</h2>
 
-            <p class="lead">Integrar esta categoría, ser parte de la organización y trabajar para que muchos chicos, estudiantes técnicos, puedan participar, es un gran orgullo para mí.</p>
 
-            <p>Correr en autos fue mi gran pasión, no me resulto nada sencillo subirme por primera vez a un auto de carreras, solo quería estar cerca, armarlo y compartir con los mecánicos esa pasión de tratar de ver que lo que uno hace con sus manos, es capaz de ganar una carrera.</p>
-
- <p><b>DESAFÍO ECO</b> es eso, es la posibilidad aún más cercana de formar un equipo, trabajar con un plan, estudiar y poner en práctica esos conocimientos. Son meses de desarrollo, es compartir una misma pasión, es pensar y hacer rodar  algo que sale de un proyecto colectivo y si es posible verlo ganar.</p>
-
-  <p><b>DESAFÍO ECO</b> es mucho más que eso, es trabajar con las nuevas tendencias mundiales de la industria automotriz, las energías limpias y renovables.</p>
-
-   <p><b>DESAFÍO ECO</b> propone algo más, trabajar en conjunto, como lo hacen los grandes equipos de F1, donde hay un grupo de diseño, un grupo de constructores, unos destacados pilotos y un coordinador de todos esos esfuerzos. Por eso este año, será uno de los chicos quien esté a cargo de las relaciones de ese equipo con los organismos de Fiscalización del <b>ACA</b> y de la organización general del <b>DESAFÍO ECO</b>.</p>
-
-   <p><b>DESAFÍO ECO</b> será parte de vuestras vidas para siempre. No hay manera de olvidar estos inicios en la construcción de un prototipo eléctrico, no hay manera de practicar el automovilismo más integralmente que haciendo y pensando cada detalle de vuestros autos.</p>
-
-      <p>Les damos la bienvenida a un nuevo <b>CAMPEONATO ARGENTINO DE AUTOS ELECTRICOS</b>, les damos también todo el apoyo para que cada escuela pueda consultar todo lo necesario para desarrollar con eficiencia cada proyecto.</p>
-
-
-   <p>Trabajamos mucho para que aprendan, participen y se diviertan con estas competencias, a nivel nacional. Ya hay una escuela y un equipo que son Campeones Argentinos 2013, la Escuela Otto Krause. Este año, habrá más inscriptos, autos diferentes, circuitos nuevos y un gran desafío…el <b>CAMPEONATO ARGENTINO DESAFÍO ECO 2014</b>, fiscalizado por <b>ACA-FIA</b>.</p>
-
-   <p>Quiero de manera personal, desearles a todos que sea este el camino de un futuro mejor para Uds. de un mundo de nuevas tecnologías renovables y amigables con el medio ambiente, está ahora en sus manos, hacer un auto más eficiente…</p>
+            <p class="lead"> Integrar esta categoría, ser parte de la organización y trabajar para que muchos chicos -estudiantes técnicos- puedan participar, es un gran orgullo para mí.</p>
+            <p>Correr en autos fue mi gran pasión. No me resultó nada sencillo subirme por primera vez a un coche de carreras; sólo quería estar cerca de él, armarlo y compartir con los mecánicos la pasión por ver cómo aquello que uno hace con sus manos te permite ganar una carrera.</p>
+            <p><b>DESAFÍO ECO</b> es justamente eso. Es la posibilidad más cercana que tienen los chicos para formar un equipo, trabajar con un plan, estudiar sus variables y poner en práctica esos conocimientos. Son meses de desarrollo en los que se comparte una misma pasión y donde se piensa y se hace rodar un auto, producto de un proyecto colectivo, con la esperanza de verlo ganador.</p>
+            <p>Pero <b>DESAFÍO ECO</b> propone muchas otras cosas, como por ejemplo trabajar con las nuevas tendencias de la industria automotriz mundial y con los sistemas de energías renovables y limpias.</p>
+            <p><b>DESAFÍO ECO</b> fomenta el trabajo en conjunto, del mismo modo que lo hacen los grandes equipos de F1 conformados por diseñadores, constructores, pilotos y jefes de equipo. Es por eso que, este año, será uno de los chicos quien estará a cargo de las relaciones de su equipo con los organismos de fiscalización del ACA y con la organización general del <b>DESAFÍO ECO</b>.</p>
+            <p><b>DESAFÍO ECO</b> será parte de sus vidas para siempre. No hay manera de olvidar este comienzo en la construcción de un prototipo eléctrico, ni existe otro modo de practicar el automovilismo de manera más integral que pensando, desarrollando y construyendo cada pieza de sus autos.</p>
+            <p>Les damos la bienvenida a un nuevo CAMPEONATO ARGENTINO DE AUTOS ELÉCTRICOS, como así también les brindamos nuestro apoyo para que cada escuela pueda realizar las consultas que crea necesarias.</p>
+            <p>Trabajamos mucho para que aprendan, participen y se diviertan en estas competencias a nivel nacional. La Escuela Otto Krause fue el equipo Campeón Argentino 2013. Este año habrá más inscriptos, nuevos autos y circuitos y un gran desafío…el CAMPEONATO ARGENTINO <b>DESAFÍO ECO</b> 2014, fiscalizado por el ACA y por la FIA.</p>
+            <p> De manera personal, quiero desearles a todos los participante que este sea el camino para un futuro mejor, un mundo con nuevas tecnologías, renovables y amigables con el medio ambiente. Ahora queda en sus manos la tarea de fabricar y desarrollar un auto ecológico más eficiente…</p>
 
     <p class="lead" style="float:right;"><b>Rubén Daray</b></p>
     <br>
@@ -354,8 +346,7 @@
                     <div class="row">
                         <div class="col-md-8">
                             <h4>Desafío Eco</h4>
-                            <p>Prototipos de emisión cero, equipados con baterías de gel, participarán de una competencia única que
-                    premiará la máxima eficiencia en el diseño.</p>
+                            <p>El Desafío Eco está compuesto por vehículos eléctricos de cero emisiones, equipados con baterías de gel, los cuales participarán en un campeonato que premiará la máxima eficiencia de los prototipos y de los equipos. </p>
                             <hr class="light">
                         </div>
                         <div class="col-md-3 col-md-offset-1">
