--- a/videos.html
+++ b/videos.html
@@ -234,8 +234,8 @@
             <div class="col-md-8">
                 <h4>Desafioeco</h4>
 
-                <p>Prototipos de emisión cero, equipados con baterías de gel, participarán de una competencia única que
-                    premiará la máxima eficiencia en el diseño </p>
+                <p>El Desafío Eco está compuesto por vehículos eléctricos de cero emisiones, equipados con baterías de gel, los cuales participarán en un campeonato que premiará la máxima eficiencia de los prototipos y de los equipos. </p>
+
                 <hr class="light">
             </div>
             <div class="col-md-3 col-md-offset-1">
