--- a/underConstruction.html
+++ b/underConstruction.html
@@ -112,13 +112,14 @@
 
                         </ul>
                     </li>
-                    
-                                <li class="dropdown active">
+
+                                <li class="dropdown">
                                     <a class="dropdown-toggle" href="#">
-                                        Carreras
+                                        Fechas 2014
                                         <i class="icon icon-angle-down"></i>
                                     </a>
-                                    <ul class="dropdown-menu active">
+                                    <ul class="dropdown-menu">
+                                        <li><a href="fecha1.html">Palermo</a></li>
                                         <li><a href="underConstruction.html">Resultados</a></li>
                                         <li><a href="underConstruction.html">Webcams en pista</a></li>
                                     </ul>
