--- a/index.html
+++ b/index.html
@@ -327,6 +327,9 @@
         <div>
             <img class="img-responsive" src="img/logos/lisso.jpg" alt="">
         </div>
+        <div>
+            <img class="img-responsive" src="img/logos/bata.png" alt="">
+        </div>
 
 
     </div>
