--- a/contacto.html
+++ b/contacto.html
@@ -127,7 +127,7 @@
                         <ul class="dropdown-menu">
 <li><a href="fecha1.html">Palermo</a></li>                            <li><a href="fecha2.html">Rafaela</a></li>
 
-                            <li><a href="underConstruction.html">Resultados</a></li>
+                            <li><a href="resultados.html">Resultados</a></li>
                             <li><a href="underConstruction.html">Webcams en pista</a></li>
                         </ul>
                     </li>
