--- a/contacto.html
+++ b/contacto.html
@@ -125,7 +125,7 @@
                             <i class="icon icon-angle-down"></i>
                         </a>
                         <ul class="dropdown-menu">
-<li><a href="fecha1.html">Palermo</a></li>                            <li><a href="fecha2.html">Rafaela</a></li>
+<li><a href="fecha1.html">Palermo</a></li>                            <li><a href="fecha2.html">Rafaela</a></li> <li><a href="fecha3.html">Concordia</a></li>
 
                             <li><a href="resultados.html">Resultados</a></li>
                             <li><a href="underConstruction.html">Webcams en pista</a></li>
