--- a/fecha3.html
+++ b/fecha3.html
@@ -127,7 +127,6 @@
 <li><a href="fecha1.html">Palermo</a></li>                            <li><a href="fecha2.html">Rafaela</a></li> <li><a href="fecha3.html">Concordia</a></li>
 
                             <li><a href="resultados.html">Resultados</a></li>
-                            <li><a href="underConstruction.html">Webcams en pista</a></li>
                         </ul>
                     </li>
 
@@ -144,41 +143,33 @@
 <div role="main" class="main">
 <div id="content" class="content full">
 
-    <div class="slider-container slider-container-fullscreen hidden-xs" height="600px">
-        <div class="slider" id="revolutionSliderFullScreen">
-            <ul>
-                <li data-transition="fade" data-slotamount="10" data-masterspeed="300">
-                    <img src="img/slides/slide2.png" data-fullwidthcentering="on" alt="">
+<div class="container">
+<div class="row center">
+    <div class="col-md-12">
+        <p class="featured lead">
+            Llegó la hora de que todo se defina en el <span class="alternative-font">desafío eco 2014.</span> llegó la hora de concordia.
+        </p>
+    </div>
+</div>
 
-                    <div class="tp-caption main-label sft stb"
-                         data-x="20"
-                         data-y="25"
-                         data-speed="300"
-                         data-start="500"
-                         data-easing="easeOutExpo" style="color: #ffffff;">MIRÁ LOS RESULTADOS DEL CAMPEONATO</br>
+    <div class="row">
+        <div class="col-md-12">
+            <h2><strong>Mapa</strong> del circuito</h2>
+            <div class="row">
+                <div class="owl-carousel push-bottom" data-plugin-options='{"items": 1, "autoHeight": true}'>
+                    <div>
+                        <div class="col-md-12">
+                            <img src="img/concordia.jpg" data-thumb="img/concordia.jpg" alt="" style="width: 100%; margin-bottom: 20px;">
+                        </div>
                     </div>
 
-                    <!--<div class="tp-caption sft stb visible-lg"-->
-                    <!--data-x="717"-->
-                    <!--data-y="100"-->
-                    <!--data-speed="300"-->
-                    <!--data-start="1000"-->
-                    <!--data-easing="easeOutExpo"><img src="img/slides/slide-title-border.png" alt=""></div>-->
-
-
-                    <div class="tp-caption sft stb"
-                         data-x="500"
-                         data-y="100"
-                         data-speed="300"
-                         data-start="600"
-                         data-easing="easeOutExpo"><a href="http://organisation.mylaps.com/championship/view.jsp?id=40222" target="_blank"
-                                                      class="btn btn-lg btn-primary main-button">Ver resultados</a>
-                    </div>
-
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
-    </div></div>
+</div>
+
+</div>
+</div>
 
 
 <footer class="short" id="footer" style="margin-top: -45px;">
